fixed blockquote on mobile

--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -1,11 +1,11 @@
-@import url("https://fonts.googleapis.com/css2?family=Ubuntu&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Ubuntu+Condensed&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Noto+Sans+Mono:wght@600&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Comfortaa:wght@600&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Ubuntu&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Ubuntu+Condensed&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+Mono:wght@600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@600&display=swap');
 
 .aboutmeContainer {
   padding: 0 2rem;
-  font-family: "Ubuntu";
+  font-family: 'Ubuntu';
 }
 
 .main {
@@ -72,7 +72,7 @@
   margin: auto;
   text-align: center;
   font-weight: 600;
-  font-family: "Comfortaa", cursive;
+  font-family: 'Comfortaa', cursive;
 }
 
 .aboutme hr {
@@ -121,7 +121,7 @@
 }
 
 .cryxnetLogo h1 {
-  font-family: "Ubuntu Condensed", sans-serif;
+  font-family: 'Ubuntu Condensed', sans-serif;
 
   font-size: 15vw;
   text-align: center;
@@ -323,24 +323,24 @@
 
 .blockquote {
   position: relative;
-  margin-top: 50vh;
-  margin-bottom: 50vh;
+  margin-top: calc(50vh - 90px);
+  margin-bottom: calc(50vh - 90px);
 }
 
 .blockquote p {
-  font-family: "Ubuntu Condensed", sans-serif;
+  font-family: 'Ubuntu Condensed', sans-serif;
   font-size: 35px;
   font-weight: 700px;
   text-align: center;
 }
 
 .blockquote p::before {
-  content: "\201c";
-  font-size: 180px;
+  content: '\201c';
+  font-size: 140px;
 }
 
 .blockquote::after {
-  content: "";
+  content: '';
   top: 20px;
   left: 50%;
   margin-left: -100px;
